# IMP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Isomap.cpp  Isomap.h  KNN.cpp  main.cpp
src/OpenCL/: KNN.cl
